--- a/index-2.html
+++ b/index-2.html
@@ -395,12 +395,27 @@
             </p>
           </div>
         </div>
-        <div class="pro5-img1">
+        <div class="pro5-img2">
           <div class="img-pos">
-            <p class="pro4-price-1">APPLE MUSIC</p>
-            <p class="pro5-text-1">Get 3 months of Apple Music free.</p>
-            <p class="pro5-text-2">
-              Included with the purchase of select Apple devices.
+            <p class="pro4-price-2">APPLE TV+</p>
+            <p class="pro5-text-3">
+              Get 3 months free when you buy an Apple device.
+            </p>
+          </div>
+        </div>
+        <div class="pro5-img3">
+          <div class="img-pos">
+            <p class="pro4-price-1"></p>
+            <p class="pro5-text-1">
+              Six Apple services. One easy subscription.
+            </p>
+          </div>
+        </div>
+        <div class="pro5-img4">
+          <div class="img-pos">
+            <p class="pro4-price-5">APPLE INTELLIGENCE</p>
+            <p class="pro5-text-1">
+              New features for writing, focus,communication, and more.
             </p>
           </div>
         </div>
