--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apple store</title>
-    <link rel="stylesheet" href="/section-1.css" />
-    <link rel="stylesheet" href="/section-2.css" />
-    <link rel="stylesheet" href="/section-3.css" />
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="section-1.css" />
+    <link rel="stylesheet" href="section-2.css" />
+    <link rel="stylesheet" href="section-3.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -159,7 +159,10 @@
       <div class="main-movie">
         <div class="movie-button">
           <button>Stream now</button>
-          <p><span class="white">Comedy ·</span> Will they make history…or fake it?</p>
+          <p>
+            <span class="white">Comedy ·</span> Will they make history…or fake
+            it?
+          </p>
         </div>
       </div>
       <img class="movie" src="/images/movie-3.jpg" alt="" />
