--- a/index-2.html
+++ b/index-2.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apple shop</title>
-    <link rel="stylesheet" href="/section-2.css" />
-    <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="/section-3.css" />
+    <link rel="stylesheet" href="section-2.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="section-3.css" />
   </head>
   <body>
     <nav>
-      <img class="nav-gap" src="/images/SVG.svg" alt="" />
+      <img class="nav-gap" src="images/SVG.svg" alt="" />
       <p>Store</p>
       <p>Mac</p>
       <p>iPad</p>
@@ -22,8 +22,8 @@
       <p>Entertainment</p>
       <p>Accessories</p>
       <p>Support</p>
-      <img src="/images/search.svg" alt="" />
-      <img class="nav-gap" src="/images/store.svg" alt="" />
+      <img src="images/search.svg" alt="" />
+      <img class="nav-gap" src="images/store.svg" alt="" />
     </nav>
     <header>
       <p>
@@ -32,14 +32,14 @@
       </p>
     </header>
     <section class="background">
-      <img src="/images/Background.png" alt="" />
+      <img src="images/Background.png" alt="" />
     </section>
     <section class="text-header">
       <p class="nav-head-text">
         <span class="head-ranbow-text">Store.</span> Gift magic this holiday.
       </p>
       <div class="operator">
-        <img class="i" src="/images/egchiin-zurag.jpg" alt="" />
+        <img class="i" src="images/egchiin-zurag.jpg" alt="" />
         <div class="tex-op">
           <p class="link">Need shopping help?</p>
           <a class="text-bottom" href="">Ask a Specialist</a>
@@ -50,47 +50,47 @@
     </section>
     <section class="product-list">
       <div class="product">
-        <img src="/images/product-1.png" alt="" class="product-image" />
+        <img src="images/product-1.png" alt="" class="product-image" />
         <p class="product-intro">Mac</p>
       </div>
       <div class="product">
-        <img src="/images/product-2.png" alt="" class="product-image" />
+        <img src="images/product-2.png" alt="" class="product-image" />
         <p class="product-intro">iPhone</p>
       </div>
       <div class="product">
-        <img src="/images/product-3.png" alt="" class="product-image" />
+        <img src="images/product-3.png" alt="" class="product-image" />
         <p class="product-intro">iPad</p>
       </div>
       <div class="product">
-        <img src="/images/product-4.png" alt="" class="product-image" />
+        <img src="images/product-4.png" alt="" class="product-image" />
         <p class="product-intro">Apple Watch</p>
       </div>
       <div class="product">
-        <img src="/images/product-5.png" alt="" class="product-image" />
+        <img src="images/product-5.png" alt="" class="product-image" />
         <p class="product-intro">Apple Vision Pro</p>
       </div>
       <div class="product">
-        <img src="/images/product-6.png" alt="" class="product-image" />
+        <img src="images/product-6.png" alt="" class="product-image" />
         <p class="product-intro">AirPods</p>
       </div>
       <div class="product">
-        <img src="/images/product-7.png" alt="" class="product-image" />
+        <img src="images/product-7.png" alt="" class="product-image" />
         <p class="product-intro">AirTag</p>
       </div>
       <div class="product">
-        <img src="/images/product-8.png" alt="" class="product-image" />
+        <img src="images/product-8.png" alt="" class="product-image" />
         <p class="product-intro">Apple TV 4K</p>
       </div>
       <div class="product">
-        <img src="/images/product-9.png" alt="" class="product-image" />
+        <img src="images/product-9.png" alt="" class="product-image" />
         <p class="product-intro">Homepod</p>
       </div>
       <div class="product">
-        <img src="/images/product-10.png" alt="" class="product-image" />
+        <img src="images/product-10.png" alt="" class="product-image" />
         <p class="product-intro">Accessories</p>
       </div>
       <div class="product">
-        <img src="/images/product-11.png" alt="" class="product-image" />
+        <img src="images/product-11.png" alt="" class="product-image" />
         <p class="product-intro">Apple Gift Card</p>
       </div>
     </section>
@@ -143,13 +143,13 @@
         </div>
         <div class="product-img2">
           <div class="img-pos2-2">
-            <img src="/images/product2-2.png" alt="" class="product-img" />
+            <img src="images/product2-2.png" alt="" class="product-img" />
             <div class="color">
-              <img src="/images/color1.png" alt="" class="color1" />
-              <img src="/images/color2.png" alt="" class="color2" />
-              <img src="/images/color3.png" alt="" class="color3" />
-              <img src="/images/color4.png" alt="" class="color4" />
-              <img src="/images/color5.png" alt="" class="color5" />
+              <img src="images/color1.png" alt="" class="color1" />
+              <img src="images/color2.png" alt="" class="color2" />
+              <img src="images/color3.png" alt="" class="color3" />
+              <img src="images/color4.png" alt="" class="color4" />
+              <img src="images/color5.png" alt="" class="color5" />
             </div>
             <div class="all-text-size">
               <div class="text2-size">
@@ -162,7 +162,7 @@
         </div>
         <div class="product-img2">
           <div class="img-pos2-3">
-            <img src="/images/product2-3.png" alt="" />
+            <img src="images/product2-3.png" alt="" />
             <div class="all-text-size">
               <div class="text2-size">
                 <p class="item-price-1">Free Engraving</p>
@@ -174,7 +174,7 @@
         </div>
         <div class="product-img2">
           <div class="img-pos2-3">
-            <img src="/images/product2-4.png" alt="" />
+            <img src="images/product2-4.png" alt="" />
             <div class="all-text-size">
               <div class="text2-size">
                 <p class="item-price-1">Free Engraving</p>
@@ -188,7 +188,7 @@
         </div>
         <div class="product-img2">
           <div class="img-pos2-3">
-            <img src="/images/product2-5.png" alt="" />
+            <img src="images/product2-5.png" alt="" />
             <div class="all-text-size">
               <div class="text2-size">
                 <p class="item-price-1">New</p>
@@ -200,7 +200,7 @@
         </div>
         <div class="product-img2">
           <div class="img-pos2-3">
-            <img src="/images/product2-3.png" alt="" />
+            <img src="images/product2-3.png" alt="" />
             <div class="all-text-size">
               <div class="text2-size">
                 <p class="item-price-1">New</p>
@@ -227,14 +227,14 @@
         </div>
         <div class="product-img2">
           <div class="img-pos2-2">
-            <img src="/images/product3-2.png" alt="" class="product-img" />
+            <img src="images/product3-2.png" alt="" class="product-img" />
             <div class="color">
-              <img src="/images/color1-1.png" alt="" class="color1" />
-              <img src="/images/color1-2.png" alt="" class="color2" />
-              <img src="/images/color1-3.png" alt="" class="color3" />
-              <img src="/images/color1-4.png" alt="" class="color4" />
-              <img src="/images/color1-5.png" alt="" class="color5" />
-              <img src="/images/color1-6.png" alt="" class="color6" />
+              <img src="images/color1-1.png" alt="" class="color1" />
+              <img src="images/color1-2.png" alt="" class="color2" />
+              <img src="images/color1-3.png" alt="" class="color3" />
+              <img src="images/color1-4.png" alt="" class="color4" />
+              <img src="images/color1-5.png" alt="" class="color5" />
+              <img src="images/color1-6.png" alt="" class="color6" />
             </div>
             <div class="all-text-size">
               <div class="text2-size">
@@ -249,13 +249,13 @@
         </div>
         <div class="product-img2">
           <div class="img-pos2-2">
-            <img src="/images/product3-3.png" alt="" class="product-img" />
+            <img src="images/product3-3.png" alt="" class="product-img" />
             <div class="color">
-              <img src="/images/color2-1.png" alt="" class="color1" />
-              <img src="/images/color2-2.png" alt="" class="color2" />
-              <img src="/images/color2-3.png" alt="" class="color3" />
-              <img src="/images/color2-4.png" alt="" class="color4" />
-              <img src="/images/color2-5.png" alt="" class="color5" />
+              <img src="images/color2-1.png" alt="" class="color1" />
+              <img src="images/color2-2.png" alt="" class="color2" />
+              <img src="images/color2-3.png" alt="" class="color3" />
+              <img src="images/color2-4.png" alt="" class="color4" />
+              <img src="images/color2-5.png" alt="" class="color5" />
             </div>
             <div class="all-text-size">
               <div class="text2-size">
@@ -268,12 +268,12 @@
         </div>
         <div class="product-img2">
           <div class="img-pos2-2">
-            <img src="/images/product3-4.png" alt="" class="product-img" />
+            <img src="images/product3-4.png" alt="" class="product-img" />
             <div class="color">
-              <img src="/images/color3-1.png" alt="" class="color1" />
-              <img src="/images/color3-2.png" alt="" class="color2" />
-              <img src="/images/color3-3.png" alt="" class="color3" />
-              <img src="/images/color3-4.png" alt="" class="color4" />
+              <img src="images/color3-1.png" alt="" class="color1" />
+              <img src="images/color3-2.png" alt="" class="color2" />
+              <img src="images/color3-3.png" alt="" class="color3" />
+              <img src="images/color3-4.png" alt="" class="color4" />
             </div>
             <div class="all-text-size">
               <div class="text2-size">
@@ -288,11 +288,11 @@
         </div>
         <div class="product-img2">
           <div class="img-pos2-2">
-            <img src="/images/product3-5.png" alt="" class="product-img" />
+            <img src="images/product3-5.png" alt="" class="product-img" />
             <div class="color">
-              <img src="/images/color4-1 .png" alt="" class="color1" />
-              <img src="/images/color4-2.png" alt="" class="color2" />
-              <img src="/images/color4-3.png" alt="" class="color3" />
+              <img src="images/color4-1 .png" alt="" class="color1" />
+              <img src="images/color4-2.png" alt="" class="color2" />
+              <img src="images/color4-3.png" alt="" class="color3" />
             </div>
             <div class="all-text-size">
               <div class="text2-size">
@@ -307,11 +307,11 @@
         </div>
         <div class="product-img2">
           <div class="img-pos2-2">
-            <img src="/images/product3-5.png" alt="" class="product-img" />
+            <img src="images/product3-5.png" alt="" class="product-img" />
             <div class="color">
-              <img src="/images/color4-1 .png" alt="" class="color1" />
-              <img src="/images/color4-2.png" alt="" class="color2" />
-              <img src="/images/color4-3.png" alt="" class="color3" />
+              <img src="images/color4-1 .png" alt="" class="color1" />
+              <img src="images/color4-2.png" alt="" class="color2" />
+              <img src="images/color4-3.png" alt="" class="color3" />
             </div>
             <div class="all-text-size">
               <div class="text2-size">
