--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <nav>
-      <img class="nav-gap" src="/images/SVG.svg" alt="" />
+      <img class="nav-gap" src="images/SVG.svg" alt="" />
       <a>Store</a>
       <a>Mac</a>
       <a>iPad</a>
@@ -29,8 +29,8 @@
       <a>Entertainment</a>
       <a>Accessories</a>
       <a>Support</a>
-      <img src="/images/search.svg" alt="" />
-      <img class="nav-gap" src="/images/store.svg" alt="" />
+      <img src="images/search.svg" alt="" />
+      <img class="nav-gap" src="images/store.svg" alt="" />
     </nav>
     <header>
       <p>
@@ -80,7 +80,7 @@
     <div class="frame-13">
       <div class="back">
         <div class="photo-1">
-          <img class="air" src="/images/head.png" alt="" />
+          <img class="air" src="images/head.png" alt="" />
           <p class="primary-text">Two sizes. Faster chip. Does it all.</p>
           <div class="button-c">
             <button class="primary-button">Learn more</button>
@@ -102,7 +102,7 @@
       <div class="back">
         <div class="photo-3">
           <div class="parent">
-            <img src="/images/Vector.svg" alt="" />
+            <img src="images/Vector.svg" alt="" />
             <h1>WATCH</h1>
           </div>
           <h2>SERIES 10</h2>
@@ -127,7 +127,7 @@
       <div class="back">
         <div class="photo-5">
           <div class="parent">
-            <img src="/images/Vector.svg" alt="" />
+            <img src="images/Vector.svg" alt="" />
             <h1>Trade In</h1>
           </div>
           <p class="primary-text">
@@ -141,7 +141,7 @@
       <div class="back">
         <div class="photo-6">
           <div class="parent">
-            <img src="/images/Vector.svg" alt="" />
+            <img src="images/Vector.svg" alt="" />
             <h1>Card</h1>
           </div>
           <p class="primary-text">
@@ -155,7 +155,7 @@
       </div>
     </div>
     <section class="scroll-container">
-      <img class="movie" src="/images/movie-2.jpg" alt="" />
+      <img class="movie" src="images/movie-2.jpg" alt="" />
       <div class="main-movie">
         <div class="movie-button">
           <button>Stream now</button>
@@ -165,7 +165,7 @@
           </p>
         </div>
       </div>
-      <img class="movie" src="/images/movie-3.jpg" alt="" />
+      <img class="movie" src="images/movie-3.jpg" alt="" />
       <div class="tablish"></div>
     </section>
     <section class="tablish">
@@ -262,25 +262,25 @@
       <div class="container-1">
         <div class="link-1">
           <p>Improve Your Posture wicth Pilates</p>
-          <img src="/images/fitness.svg" alt="" />
+          <img src="images/fitness.svg" alt="" />
         </div>
         <div class="link-2">
           <p>R&B Now</p>
           <div class="ime">
-            <img class="link-img" src="/images/ime2.jpg" alt="" />
-            <img class="music-ime" src="/images/music.svg" alt="" />
+            <img class="link-img" src="images/ime2.jpg" alt="" />
+            <img class="music-ime" src="images/music.svg" alt="" />
           </div>
         </div>
         <div class="link-3">
           <p>NBA 2K25 Arcade Edition</p>
-          <img src="/images/arcade.svg" alt="" />
+          <img src="images/arcade.svg" alt="" />
         </div>
         <div class="link-4">
           <p>Strength with Kim</p>
-          <img src="/images/fitness.svg" alt="" />
+          <img src="images/fitness.svg" alt="" />
         </div>
         <div class="link-5">
-          <img src="/images/ime5.jpg" alt="" />
+          <img src="images/ime5.jpg" alt="" />
         </div>
       </div>
 
