course deer hiisen zuils

--- a/index-2.html
+++ b/index-2.html
@@ -414,13 +414,38 @@
         <div class="pro5-img4">
           <div class="img-pos">
             <p class="pro4-price-5">APPLE INTELLIGENCE</p>
-            <p class="pro5-text-1">
+            <p class="pro5-text-6">
               New features for writing, focus,communication, and more.
             </p>
           </div>
         </div>
       </div>
-      <div class="section6"></div>
+      <p class="head-text">
+        <span class="ranbow-text">Special Savings.</span> iPhone carrier deals
+        and exclusive savings for school,<br />businesses, and more.
+      </p>
+      <div class="section6">
+        <div class="pro6-1">
+          <div class="img-pos">
+            <p class="pro4-price-5">APPLE INTELLIGENCE</p>
+            <p class="pro6-text-1">
+              Apple. Your one‑stop shop for incredible carrier deals.
+            </p>
+            <p class="pro6-text-2">
+              Get up to $1000 in credit on a new iPhone with AT&T, Boost Mobile,
+              T‑Mobile, or Verizon. Trade‑in may be required.⁴
+            </p>
+          </div>
+        </div>
+        <div class="pro6-2">
+          <div class="img-pos">
+            <p class="pro4-price-5">EDUCATION</p>
+            <p class="pro6-text-1">
+              Buy a new Mac or iPad with education savings.
+            </p>
+          </div>
+        </div>
+      </div>
       <div class="section7"></div>
     </section>
   </body>
