--- a/index-2.html
+++ b/index-2.html
@@ -11,17 +11,17 @@
   <body>
     <nav>
       <img class="nav-gap" src="images/SVG.svg" alt="" />
-      <p>Store</p>
-      <p>Mac</p>
-      <p>iPad</p>
-      <p>iPhone</p>
-      <p>Watch</p>
-      <p>Vision</p>
-      <p>Airpods</p>
-      <p>TV & Home</p>
-      <p>Entertainment</p>
-      <p>Accessories</p>
-      <p>Support</p>
+      <a>Store</a>
+      <a>Mac</a>
+      <a>iPad</a>
+      <a>iPhone</a>
+      <a>Watch</a>
+      <a>Vision</a>
+      <a>Airpods</a>
+      <a>TV & Home</a>
+      <a>Entertainment</a>
+      <a>Accessories</a>
+      <a>Support</a>
       <img src="images/search.svg" alt="" />
       <img class="nav-gap" src="images/store.svg" alt="" />
     </nav>
@@ -32,7 +32,7 @@
       </p>
     </header>
     <section class="background">
-      <img src="images/Background.png" alt="" />
+      <img src="images/back1.png" alt="" />
     </section>
     <section class="text-header">
       <p class="nav-head-text">
@@ -445,8 +445,53 @@
             </p>
           </div>
         </div>
+        <div class="pro6-3">
+          <div class="img-pos">
+            <p class="pro4-price-5">CERTIFIED REFURBISHED</p>
+            <p class="pro6-text-1">
+              Shop refurbished Apple products backed by a one‑year warranty.
+            </p>
+          </div>
+        </div>
+        <div class="pro6-4">
+          <div class="img-pos">
+            <p class="pro4-price-5">BUSINESS</p>
+            <p class="pro5-text-7">
+              From enterprise to small business, we’ll work with you.
+            </p>
+          </div>
+        </div>
+        <div class="pro6-5">
+          <div class="img-pos">
+            <p class="pro4-price-5">GOVERNMENT</p>
+            <p class="pro6-text-1">
+              Special pricing is available for state, local, and federal
+              agencies.
+            </p>
+          </div>
+        </div>
       </div>
-      <div class="section7"></div>
+      <div class="section7">
+        <div class="heading-text">Quick Links</div>
+        <div class="last-btns">
+          <button class="primary-btn">
+            Order Status
+            <img src="/Appple-Web/images/last-btn.svg" alt="" />
+          </button>
+          <button class="primary-btn">
+            Shopping Help
+            <img src="/Appple-Web/images/last-btn.svg" alt="" />
+          </button>
+          <button class="primary-btn">
+            Returns
+            <img src="/Appple-Web/images/last-btn.svg" alt="" />
+          </button>
+          <button class="primary-btn">
+            Your Saves
+            <img src="/Appple-Web/images/last-btn.svg" alt="" />
+          </button>
+        </div>
+      </div>
     </section>
   </body>
 </html>
